# runtime

src/coreclr/debug/createdump/: crashinfo.h  crashinfomac.cpp  datatarget.cpp  dumpwritermacho.cpp
src/coreclr/debug/daccess/: dacdbiimpl.cpp
src/coreclr/debug/di/: module.cpp  rspriv.h
src/coreclr/debug/ee/: CMakeLists.txt  clrdebugheader.cpp
src/coreclr/debug/inc/: dacdbistructures.h
src/coreclr/dlls/mscoree/: mscorwks_ntdef.src  mscorwks_unixexports.src
src/coreclr/inc/: arraylist.h  corinfo.h  daccess.h  jithelpers.h  metamodelpub.h  pedecoder.h  sbuffer.h  sstring.h  volatile.h
src/coreclr/jit/: compiler.hpp  utils.cpp  valuenum.cpp  valuenumfuncs.h
src/coreclr/md/enc/: metamodelrw.cpp
src/coreclr/md/inc/: mdcolumndescriptors.h  verifylayouts.h
src/coreclr/md/runtime/: mdcolumndescriptors.cpp  metamodelcolumndefs.h
src/coreclr/nativeaot/Runtime/: DebugHeader.cpp
src/coreclr/src/debug/createdump/: CMakeLists.txt  crashinfo.cpp  crashinfomac.cpp  createdump.h  main.cpp
src/coreclr/src/debug/dbgutil/: machoreader.cpp
src/coreclr/src/dlls/mscoree/coreclr/: CMakeLists.txt
src/coreclr/src/pal/inc/: pal.h
src/coreclr/src/pal/src/thread/: process.cpp
src/coreclr/src/vm/: ceemain.cpp
src/coreclr/tools/Common/JitInterface/: CorInfoHelpFunc.cs
src/coreclr/vm/: appdomain.hpp  assembly.hpp  ceemain.cpp  class.h  codeman.h  domainassembly.h  encee.cpp  genericdict.h  hash.h  jithelpers.cpp  jitinterface.cpp  method.hpp  methodtable.h  methodtablebuilder.cpp  object.h  peassembly.h  pefile.h  peimage.h  readytoruninfo.h  threads.h  typedesc.h
src/coreclr/vm/eventing/eventpipe/: ds-rt-coreclr.h
src/mono/mono/eventpipe/: ds-rt-mono.h
src/native/eventpipe/: CMakeLists.txt  ds-hotreload-protocol.c  ds-hotreload-protocol.h  ds-rt.h  ds-server.c  ds-sources.c  ds-types.h
